# buy-vs-rent-calculator

./: .gitignore  Cargo.toml  README.md  chart.js  index.html
.github/workflows/: deploy.yml
src/: app.rs  calculations.rs  main.rs
