[package]
name = "housing-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlCanvasElement", "Document", "Window", "Element"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = 'z'
